--- a/package.json
+++ b/package.json
@@ -19,14 +19,15 @@
     "react-slick": "^0.30.3",
     "react-spinners": "^0.17.0",
     "slick-carousel": "^1.8.1",
-    "tailwindcss": "^4.0.9"
+    "swiper": "^11.2.6",
+    "tailwindcss": "^4.1.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
-    "daisyui": "^5.0.0",
+    "daisyui": "^5.0.35",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
